# RSE_assignment1

./: 404.html  demo.ipynb  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml
docs/: index.md
search/: search_index.json
src/hello_numba/: __init__.py  taylor_expansion.py
tests/: test_taylor.py
