[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-numba-demo-damian" # CHANGE THIS to be unique!
dynamic = ["version"]
description = "A Python project demonstrating Numba with Taylor Expansions."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "numba>=0.58.0",
    "numpy>=1.21.0"
]

[project.urls]
Homepage = "https://github.com/Forma-Damian/RSE_assignment1"
Repository = "https://github.com/Forma-Damian/RSE_assignment1.git"
Issues = "https://github.com/Forma-Damian/RSE_assignment1/issues"

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov>=4.0"]
docs = ["mkdocs-material>=9.0"]
demo = ["matplotlib", "scipy", "sympy"] # For your Jupyter Notebook!

[tool.setuptools_scm]